# RNP-Miner-

./: README.md  RNP.cpp  RNPfunc_bit.h  RNPfunc_old.h  loaddata_char.h  loaddata_int.h  testfunc_old.h  type_bit.h  type_old.h
cpp/: CMakeLists.txt  Makefile  build.sh  common.h  dfom_rnp.cpp  dfom_rnp.h  main.cpp  nosep_rnp.cpp  nosep_rnp.h  pdata.cpp  pdata.h  prefixspan.cpp  prefixspan.h  pro_rnp.cpp  pro_rnp.h  rnp_b.cpp  rnp_b.h  rnp_d.cpp  rnp_d.h  rnp_miner.cpp  rnp_miner.h  rnp_pup.cpp  rnp_pup.h
